Fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   font-size: 16px;
   background-color: #1f2527;
   color: #222222;
+  overflow-x: hidden;
 }
 
 img {
